[package]
name = "backrooms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_impl = "1.1.0"
cgmath = "0.18.0"
crossterm = "0.27.0"
image = "0.24.7"
ndarray = "0.15.6"
rand = { version = "0.8.5", features = ["small_rng"] }
ratatui = "0.23.0"

[dev-dependencies]
rstest = "0.18.2"
